test/testdata/classes/methods/missing_2_args_error.lox
class Foo {
  add(a, b) {
    print a + b;
  }
}

Foo().add(); // error: Foo.add() accepts 2 arguments but 0 were given
